2006-07-29  Jean-François Wauthy <pollux@xfce.org>

	* pl.po: Updated Polish translations by Szymon Kałasz
	<szymon_maestro@gazeta.pl>

2006-07-23  Jean-François Wauthy <pollux@xfce.org>

	* de.po: Updated German translations by Enrico Tröger
	<enrico.troeger@uvena.de>
	* fr.po: Updated French translations by Maximilian Schleiss
	<maxschleiss@bluewin.ch>

2006-06-09  Jari Rahkonen <jari.rahkonen@pp2.inet.fi>

	* fi.po: Updated Finnish translation.

2006-06-04  Jean-François Wauthy <pollux@xfce.org>

	* fr.po: Updated French translations by Maximilian Schleiss
	<maxschleiss@bluewin.ch>

2006-05-17  Hydonsingore Cia <hydonsingore@mail.educities.edu.tw>

	* zh_TW.po: Traditional Chinese translation launched. Thank to 
		    Cosmo Chene <cosmolax@gmail.com>.

2006-05-13  Pau Rul-lan Ferragut <paurullan@bulma.net>

	* ca.po: updated catalan translation.

2006-05-13  Daichi Kawahata <daichi@xfce.org>

	* cs.po: Added Czech translations by Michal Varady
	  <miko.vaji@gmail.com>.

2006-05-09 Stavros Giannouris <stavrosg2002@freemail.gr>

	* el.po: fixes.

2006-05-07  Stavros Giannouris <stavrosg2002@freemail.gr>

	* el.po: Added Greek translations

2006-04-30  Moritz Heiber   <moe@xfce.org>

	* de.po, ChangeLog: Added German translations

2006-01-07  Daichi Kawahata <daichi@xfce.org>

	* eu.po, fr.po, ja.po: Updated copyright information.

2005-12-20  Daichi Kawahata <daichi@xfce.org>

	* eu.po: Fixed errors etc.

2005-12-20  Daichi Kawahata <daichi@xfce.org>

	* ChangeLog: Updated.

2005-12-04  Piarres Beobide <pi@beobide.net>

	* eu.po: Add Basque translation.

2005-11-28  Daichi Kawahata <daichi@xfce.org>

	* ChangeLog: Updated.

2005-11-22  Daichi Kawahata <daichi@xfce.org>

	* ja.po: Updated Japanese translations.

2005-11-21  Daichi Kawahata <daichi@xfce.org>

	* fr.po, ja.po, xfburn.pot: Updated.

2005-11-21  Daichi Kawahata <daichi@xfce.org>

	* POTFILES.in: Updated POTFILES.in file.

2005-11-05  Daichi Kawahata <daichi@xfce.org>

	* ChangeLog: Deciphering.
