@@ -1,3 +1,8 @@
+2006-07-31  Jean-François Wauthy <pollux@xfce.org>
+
+	* de.po: Updated German translations by Enrico Tröger
+	<enrico.troeger@uvena.de>
+
 2006-07-29  Jean-François Wauthy <pollux@xfce.org>
 
 	* pl.po: Updated Polish translations by Szymon Kałasz
